--- a/src/app/admin/searchreports/searchreports.component.html
+++ b/src/app/admin/searchreports/searchreports.component.html
@@ -7,7 +7,7 @@
                 <a href="#" class="w3-bar-item w3-button" routerLink="/homepage" routerLinkActive="active">HOME</a>
                 <a href="#about" class="w3-bar-item w3-button" routerLink="/about" routerLinkActive="active">ABOUT</a>                
                 <a href="#contact" class="w3-bar-item w3-button" routerLink="/contact" routerLinkActive="active"><i class="fa fa-envelope" ></i> CONTACT</a>
-                <a href="#AdminLogin" class="w3-bar-item w3-button" routerLink="/AdminLogin" routerLinkActive="active">LOGOUT</a>  
+                <a href="#AdminLogin" class="w3-bar-item w3-button" routerLink="/AdminLogin" routerLinkActive="active" (click)="Logout()">LOGOUT</a>  
             </div>
             <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -70,7 +70,7 @@
         <h3 style="color: whitesmoke;">Student Records</h3>
         
         
-        <table>
+        <table class="table table-striped">
             
             
             <tr>
@@ -92,6 +92,23 @@
             </tr>
         </table>
     </div>
+
+    <footer class="bg-light text-center text-md-start " style="position:fixed;width: 100%;bottom:0; background-color:lightgray ;">
+        <!-- Copyright -->
+        <div class="w3-medium w3-padding-30 bg dark">
+            <i class="fa fa-facebook-official w3-hover-opacity"></i>
+            <i class="fa fa-instagram w3-hover-opacity"></i>
+            <i class="fa fa-snapchat w3-hover-opacity"></i>
+            <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+            <i class="fa fa-twitter w3-hover-opacity"></i>
+            <i class="fa fa-linkedin w3-hover-opacity"></i>
+        
+        <br>
+          © 2020 Copyright:
+          <a class="text-dark" href="https://mdbootstrap.com/">Techno Write</a>
+        </div>
+        <!-- Copyright -->
+      </footer>
         
 </body>
         
