--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -58,6 +58,7 @@
         </div>
     </div>
     <br>
+    <br><br>
     <h2 class="w3-center"><b>About Us</b></h2>
         <div class="w3-container w3-light-grey" style="padding:128px 16px">
             
@@ -205,7 +206,7 @@
                 <i class="fa fa-linkedin w3-hover-opacity"></i>
             </div>
             <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank"
-                    class="w3-hover-text-green">Tecno Write</a></p>
+                    class="w3-hover-text-green">Techno Write</a></p>
         </footer>
 </body>
 </html>
