--- a/src/app/admin/addquestion/addquestion.component.css
+++ b/src/app/admin/addquestion/addquestion.component.css
@@ -1,12 +1,13 @@
 body {
     background: url('src\assets\School-Math-scaled.jpg') fixed;
    background-size: cover;
-   height:100%;
+   height:110vh;
    
-   padding-bottom: 30px;
+   
 }
 .container{
    padding-top: 20px;
+   padding-bottom: 30px;
 }
 
 *[role="form"] {
