--- a/src/app/admin/addquestion/addquestion.component.html
+++ b/src/app/admin/addquestion/addquestion.component.html
@@ -24,15 +24,7 @@
             <h3 style="text-align: center;">Add Question</h3>
             <br>
 
-            <div class="form-group" [class.has.error]="idcontrol.touched && idcontrol.invalid">
-                
-                <div class="col-sm-9" class="b">
-                    <input type="text" size="80%" id="id" placeholder="Question id" class="form-control" name= "Questionid" required autofocus [(ngModel)]='Question.Question_id'  #idcontrol='ngModel'/>
-                </div>
-                <span class='help-block alert-danger' *ngIf='idcontrol.touched && idcontrol.invalid'>
-                 Question Id cannot be blank
-                </span>                
-            </div>
+           
 
             <div class="form-group" [class.has.error]="namecontrol.touched && namecontrol.invalid">
                
@@ -141,5 +133,23 @@
            
         </form>
     </div>
+
+
+    <footer class="bg-light text-center text-md-start " style="position:relative;width: 100%;bottom:0; background-color:lightgray ;">
+        <!-- Copyright -->
+        <div class="w3-medium w3-padding-30 bg dark">
+            <i class="fa fa-facebook-official w3-hover-opacity"></i>
+            <i class="fa fa-instagram w3-hover-opacity"></i>
+            <i class="fa fa-snapchat w3-hover-opacity"></i>
+            <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+            <i class="fa fa-twitter w3-hover-opacity"></i>
+            <i class="fa fa-linkedin w3-hover-opacity"></i>
+        
+        <br>
+          © 2020 Copyright:
+          <a class="text-dark" href="https://mdbootstrap.com/">Techno Write</a>
+        </div>
+        <!-- Copyright -->
+      </footer>
     
 </body>  
