--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -45,7 +45,12 @@
                 <a href="#" class="w3-bar-item w3-button" routerLink="/homepage" routerLinkActive="active"><strong>HOME </strong></a>
                 <a href="#reports" class="w3-bar-item w3-button" routerLink="/reports" routerLinkActive="active"><strong>TEST HISTORY</strong></a>
                  
-                <a href="#UserLogin" class="w3-bar-item w3-button" routerLink="/UserLogin" routerLinkActive="active"><strong>LOGOUT</strong></a>  
+                <a href="#UserLogin" class="w3-bar-item w3-button" routerLink="/UserLogin" routerLinkActive="active" 
+    
+
+                (click)="Logout()"
+                
+                ><strong>LOGOUT</strong></a>  
             </div>
             <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -116,6 +121,23 @@
                     <br><br>
                     
                 </body>
+
+                <footer class="bg-light text-center text-md-start " style="position:relative;width: 100%;bottom:0; background-color:lightgray ;">
+                    <!-- Copyright -->
+                    <div class="w3-medium w3-padding-30 bg dark">
+                        <i class="fa fa-facebook-official w3-hover-opacity"></i>
+                        <i class="fa fa-instagram w3-hover-opacity"></i>
+                        <i class="fa fa-snapchat w3-hover-opacity"></i>
+                        <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+                        <i class="fa fa-twitter w3-hover-opacity"></i>
+                        <i class="fa fa-linkedin w3-hover-opacity"></i>
+                    
+                    <br>
+                      © 2020 Copyright:
+                      <a class="text-dark" href="https://mdbootstrap.com/">Techno Write</a>
+                    </div>
+                    <!-- Copyright -->
+                  </footer>
             </html>
 
 
