--- a/src/app/report-card/report-card.component.css
+++ b/src/app/report-card/report-card.component.css
@@ -22,7 +22,7 @@ body {
   table {
       font-family: arial, sans-serif;
       border-collapse: collapse;
-      width: 50%;
+      width: 80%;
       margin-left: auto;
       margin-right: auto;
       background-color:whitesmoke;
@@ -35,3 +35,6 @@ body {
       padding: 8px;
     }
     
+    tr:nth-child(even) {
+        background-color: #dddddd;
+      } 
