--- a/src/app/report-card/report-card.component.html
+++ b/src/app/report-card/report-card.component.html
@@ -7,7 +7,7 @@
                 <a href="#" class="w3-bar-item w3-button" routerLink="/homepage" routerLinkActive="active">HOME</a>
                 <a href="#about" class="w3-bar-item w3-button" routerLink="/about" routerLinkActive="active">ABOUT</a>                
                 <a href="#contact" class="w3-bar-item w3-button" routerLink="/contact" routerLinkActive="active"><i class="fa fa-envelope" ></i> CONTACT</a>
-                <a href="#AdminLogin" class="w3-bar-item w3-button" routerLink="/AdminLogin" routerLinkActive="active" 
+                <a href="#AdminLogin" class="w3-bar-item w3-button" routerLink="/UserLogin" routerLinkActive="active" 
     
 
                 (click)="Logout()"
