--- a/src/app/admin/adminlogin/adminlogin.component.html
+++ b/src/app/admin/adminlogin/adminlogin.component.html
@@ -6,7 +6,7 @@
             <a href="#home" class="w3-bar-item w3-button w3-wide"><strong>Welcome to the TECHNO WRITE</strong></a>
             <!-- Right-sided navbar links -->
             <div class="w3-right w3-hide-small">
-                <a href="#" class="w3-bar-item w3-button" routerLink="/about" routerLinkActive="active">HOME</a>
+                <a href="#" class="w3-bar-item w3-button" routerLink="/homepage" routerLinkActive="active">HOME</a>
                 <a href="#about" class="w3-bar-item w3-button" routerLink="/about" routerLinkActive="active">ABOUT</a>
                 
                 
